--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
+.bloop/
+.bsp
+.DS_Store
+.ensime
+.ensime_cache/
+.history
+.idea
+.idea_modules
+.metals/
+.sbt-scripted/
+.vscode/
 *.class
 *.log
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+/.worksheet/
+dist/*
 hs_err_pid*
+lib_managed/
+local.sbt
+metals.sbt
+project/boot/
+project/local-plugins.sbt
+project/plugins/project/
+src_managed/
+target/
